Revamped the chat and reports to be in a fixed sized container with a scrollbar if its contents are too big.

--- a/Angular/cyberwar-ang1/client/css/app.css
+++ b/Angular/cyberwar-ang1/client/css/app.css
@@ -59,6 +59,10 @@ body {
     border-color: orange;
     border-width: 2px;
 }
+
+/*
+Left Area UI styling
+ */
 #left_aside {
     height: 96%;
     width: 20%;
@@ -67,43 +71,25 @@ body {
     border-style: solid;
     border-width: 2px;
 }
-
-.round-indicator {
+#left_aside .round-indicator {
     height: 5%;
     width: 100%;
-    color: black;
-    background-color: #E1E1E1;
 }
-
-.pressure-indicator {
+#left_aside .reports {
+    height: 5%;
+    width: 100%;
+}
+#left_aside ready-indicator {
     height: 15%;
     width: 100%;
-    color: black;
-    background-color: #E1E1E1;
+    display: block;
 }
-
-.pressure-indicator .ready-indicator {
-    display: inline-block;
-    border-width: 2px;
-    width: 33%;
-    padding: 10px;
-    border-style: solid;
-    border-color: black;
-    background-color: #2abe3d;
-    text-align: center;
-}
-.pressure-indicator .ready-indicator.not-ready {
-    animation: not-ready .5s linear alternate infinite;
-}
-@keyframes not-ready {
-    from { background-color: #d4d426; }
-    to { background-color: #dedede; }
-}
-
-.chat {
+#left_aside chat {
     width: 100%;
-    height: 77%;
+    height: 75%;
+    padding: 10px;
     background-color: dimgray;
+    display: block;
 }
 
 #effects-window {
@@ -300,3 +286,74 @@ When the round is finished it'll be a blue color, signifying a permanent choice.
     color: crimson;
 }
 
+/*
+Reports Dialog styling
+ */
+ .report-container {
+    height: 500px;
+    overflow-y: auto;
+}
+
+/*
+Server Status Dialog styling
+ */
+.server-status chat {
+    width: 100%;
+    height: 400px;
+    padding: 10px;
+    background-color: dimgray;
+    display: block;
+}
+
+/*
+Ready Indicator Directive styling
+ */
+ .pressure-indicator {
+    margin-top: -20px;
+}
+.pressure-indicator .ready-indicator {
+    display: inline-block;
+    border-width: 2px;
+    width: 33%;
+    padding: 10px;
+    border-style: solid;
+    border-color: black;
+    background-color: #2abe3d;
+    text-align: center;
+}
+.pressure-indicator .ready-indicator.not-ready {
+    animation: not-ready .5s linear alternate infinite;
+}
+@keyframes not-ready {
+    from { background-color: #d4d426; }
+    to { background-color: #dedede; }
+}
+
+/*
+Chat directive styling
+ */
+.chat-container {
+    height: 100%;
+    background-color: #E1E1E1;
+    padding: 10px;
+}
+.chat-messages {
+    height: 90%;
+    overflow-y: auto;
+    text-align: left;
+}
+.chat-container form {
+    height: 10%;
+    position: relative;
+}
+.chat-container form input {
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    width: 80%;
+}
+.chat-container form button {
+    position: absolute;
+    top: 50%;
+    right: 0px;
+}
